--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "devDependencies": {
     "@craco/craco": "^6.4.3",
+    "husky": "^4.3.8",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.7.1",
     "react-scripts": "^5.0.1",
@@ -62,5 +63,15 @@
       "Firefox ESR",
       "not ie < 11"
     ]
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/kentcdodds/react-fundamentals.git"
+  },
+  "bugs": {
+    "url": "https://github.com/kentcdodds/react-fundamentals/issues"
+  },
+  "msw": {
+    "workerDirectory": "public"
   }
 }
